--- a/svg1.html
+++ b/svg1.html
@@ -29,9 +29,7 @@
 <div id="coords"></div>
 
 <div id="viewport">
-<svg id="view" height="500" width="900" onmousemove="getCoords(event)" onclick="click(event)">
-    <polyline points="20,20 40,25 60,40 80,120 120,140 200,180" style="fill:none;stroke:green;stroke-width:2" />
-</svg>
+<svg id="view" height="500" width="900" onmousemove="getCoords(event)" onclick="click(event)"></svg>
 </div>
 
 <script>
@@ -49,43 +47,39 @@
     var svgNS = svg.namespaceURI;    drawing = [];
     count = 0;
     var selected = false;
-    var sx1, sy1, sx2, sy2;
 
     function click(event) {
-        myProps = document.getElementById('viewport').getBoundingClientRect();
+        myProps = document.getElementById('view').getBoundingClientRect();
+        var x = (event.clientX - myProps.left).toFixed();
+        var y = (event.clientY - myProps.top).toFixed();
+        document.getElementById('coords').innerHTML = 'objects=' + count + ', x=' + x + ', y=' + y;
         if (selected) {
             selected = false;
-            sx2 = (event.clientX - myProps.left).toFixed();
-            sy2 = (event.clientY - myProps.top).toFixed();
-            drawing[count].setAttributeNS(null, 'x2', sx2);
-            drawing[count].setAttributeNS(null, 'y2', sy2);
+            drawing[count].setAttributeNS(null, 'x2', x);
+            drawing[count].setAttributeNS(null, 'y2', y);
             count++
         } else {
             selected = true;
-            sx1 = (event.clientX - myProps.left).toFixed();
-            sy1 = (event.clientY - myProps.top).toFixed();
             drawing[count] = document.createElementNS(svgNS, 'line');
             drawing[count].setAttributeNS(null, "stroke", "black");
             drawing[count].setAttributeNS(null, "stroke-width", 2);
-            drawing[count].setAttributeNS(null, 'x1', sx1);
-            drawing[count].setAttributeNS(null, 'y1', sy1);
-            drawing[count].setAttributeNS(null, 'x2', sx1);
-            drawing[count].setAttributeNS(null, 'y2', sy1);
+            drawing[count].setAttributeNS(null, 'x1', x);
+            drawing[count].setAttributeNS(null, 'y1', y);
+            drawing[count].setAttributeNS(null, 'x2', x);
+            drawing[count].setAttributeNS(null, 'y2', y);
             document.getElementById('view').appendChild(drawing[count]);
         }
-        //document.getElementById('coords').append(' sx1=' + sx1 + ', sy1=' + sy1 + ', sx2=' + sx2 + ', sy2=' + sy2)
     }
 
     function getCoords(event) {
-        myProps = document.getElementById('viewport').getBoundingClientRect();
+        myProps = document.getElementById('view').getBoundingClientRect();
         var x = (event.clientX - myProps.left).toFixed();
         var y = (event.clientY - myProps.top).toFixed();
-        document.getElementById('coords').innerHTML = 'x=' + x + ', y=' + y;
-        //document.getElementById('coords').append(' sx1=' + sx1 + ', sy1=' + sy1 + ', sx2=' + sx2 + ', sy2=' + sy2);
+        document.getElementById('coords').innerHTML = 'objects=' + count + ', x=' + x + ', y=' + y;
         if (selected) {
             if (drawing[count]) {
-                drawing[count].setAttributeNS(null, 'x2', (event.clientX - myProps.left).toFixed());
-                drawing[count].setAttributeNS(null, 'y2', (event.clientY - myProps.top).toFixed())
+                drawing[count].setAttributeNS(null, 'x2', x);
+                drawing[count].setAttributeNS(null, 'y2', y)
             }
         }
     }
