--- a/svg1.html
+++ b/svg1.html
@@ -42,9 +42,10 @@
             if (elem.style) elem.style.cursor = cursorStyle;
         }
     }
-    setCursorByID('view', 'crosshair');    const maxX = 900, maxY = 500;
+    setCursorByID('view', 'crosshair');
     var svg = document.createElementNS("http://www.w3.org/2000/svg", "svg");
-    var svgNS = svg.namespaceURI;    drawing = [];
+    var svgNS = svg.namespaceURI;
+    drawing = [];
     count = 0;
     var selected = false;
 
