Better debug update

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </div>
 <svg id="view" height="500" width="900" onmousemove="getCoords(evt)" onclick="click(evt)"></svg>
 
-<div id="object"></div>
+<div id="debug"></div>
 
 <script src="js/app.js"></script>
 
