--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <option value="line">line</option>
         <option value="arc">arc</option>
     </select>
+    <div id="point"></div>
     <input type="text" id="xy" value="0,0" onkeypress="return xyKeyPress(event)">
     <div id="coords"></div>
 </div>
